# OmniMind

./: .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.ollama  Dockerfile.ollama.cpu  README.md  advanced_capabilities.md  advanced_models.md  backup.ps1  deploy.ps1  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.yml  healthcheck.ps1  healthcheck.sh  kibana.yml  logstash.conf  nlp_features.md  ollama_entrypoint.sh  package-lock.json  package.json  persona_gallery.md  persona_interaction_system.md  project-structure.txt  prometheus.yml  prompt.txt  psychological_models.md  pyproject.toml  redis.conf  requirements.txt  security-monitor.ps1  use_cases.md
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: docs.py
app/core/: chat.py  compliance.py  config.py  error_reporting.py  knowledge_fusion.py  model_orchestrator.py  monitoring.py  rate_limiter.py  security.py  security_validation.py  siem_integration.py  voice.py  voice_pipeline.py
app/dependencies/: auth.py
app/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
app/schemas/: __init__.py
docs/: README.md  api.md  ui_ux_enhancements.md
docs/api/: README.md
docs/architecture/: README.md
docs/diagrams/: README.md  ml-architecture.mmd  security-architecture.mmd  system-architecture.mmd
docs/security/: README.md
docs/user-guide/: README.md  monitoring-guide.md  troubleshooting.md
grafana/dashboards/: database.json  omnimind.json  redis.json  security.json  services.json  system.json
loki/: local-config.yaml
loki/wal/: 00000019  00000020  00000034  (+16 more)
prometheus/: prometheus.yml
promtail/: config.yml
templates/: index.html
tests/: test_error_reporting.py  test_monitoring.py  test_security.py
(+209 files in other folders)
