[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnimind"
version = "0.1.0"
description = "AI-Powered Project Management System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "OmniMind Team" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.1",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "numpy>=1.24.3",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.292",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.292",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = [] 